--- a/src/main/resources/static/estilos.css
+++ b/src/main/resources/static/estilos.css
@@ -1,6 +1,6 @@
 body{
     margin: 50px 0px 0px 0px;
-    background-image: url("https://www.wallpaperup.com/uploads/wallpapers/2016/03/21/914550/5848bd73be95f0534075ce6b9fa49869.jpg");
+    background-image: url("https://images2.alphacoders.com/261/thumb-1920-26102.jpg");    
 }
 
 section div img{
@@ -17,16 +17,32 @@ section div img{
 	width: 18%;
 }
 
-h1{
+.titulo h1{
 	text-align: center;
 	margin-bottom: 50px;
 	color: white;
 	font-family: console;
 }
 
-.tablas{
-    margin: auto;
-    height: 300px;
-    width: 90%;
+.boton-tabla{
+	width: 90%;
+	margin: auto;
+}
+
+.tablas{   
+    height: 350px;   
     overflow-y: scroll; /* agregar scroll a la tabla */
+    opacity: 0.9;
+}
+
+.btn{
+	border-color: black;
+}
+
+.btn_agregar{
+    margin: 30px 0 10px 0px; 
+}
+
+th, td{
+	text-align: center;
 }
