--- a/src/main/resources/templates/editoriales.html
+++ b/src/main/resources/templates/editoriales.html
@@ -9,6 +9,8 @@
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
+
     <link rel="stylesheet" href="estilos.css">
 
     <title>Editoriales</title>
@@ -21,7 +23,7 @@
         <!-- ============ NAV ============-->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">📚</a>
+              <a class="navbar-brand" th:href="@{/}">📚</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -55,29 +57,41 @@
       <div class="titulo bg-dark">
     	 <h1>EDITORIALES</h1>
       </div>
-      <div class="tablas mt-4">
-      		<table class="table table-dark table-hover"> 
-              <thead class="thead-dark">
-                <tr>
-                  <th>Nombre</th>
-                  <th>Alta</th>
-                  <th>Modificar</th>
-                  <th>Eliminar</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr th:each="editorial:${editoriales}">
-                  <td th:text="${editorial.nombre}"></td>
-                  <td th:text="${editorial.alta}"></td>
-                  <td>
-                     <a class="btn btn-warning mb-2">〽</a>
-                  </td>
-                  <td>
-                     <a class="btn btn-danger mb-2">❌</a>
-                  </td>      
-                </tr>
-              </tbody>
-            </table>
+      <div class="boton-tabla">
+	      <a th:href="@{/agregarEditorial}" class="btn btn-primary btn_agregar">Agregar</a>
+	      <div class="tablas mt-4">
+	      		<table class="table table-dark table-hover"> 
+	              <thead class="thead-dark">
+	                <tr>
+	                  <th>Nombre</th>
+	                  <th>¿Está Activo?</th>
+	                  <th>Modificar</th>
+	                  <th>Alta/Baja</th>
+	                  <th>Eliminar</th>
+	                </tr>
+	              </thead>
+	              <tbody>
+	                <tr th:each="editorial:${editoriales}">
+	                  <td th:text="${editorial.nombre}"></td>
+	                  <td>
+						<i th:if="${editorial.alta}" class="fa fa-circle text-success"></i>
+						<i th:unless="${editorial.alta}" class="fa fa-circle text-danger"></i>
+					  </td>           
+	                  <td>
+	                     <a th:href="@{/modificarEditorial}+${editorial.id}"><i class="fa fa-cogs text-warning"></i></a>
+	                  </td>
+	                  <td>
+	                     <a th:href="@{/altaEditorial}+${editorial.id}"><i class="fa fa-arrow-up text-success"></i></a>
+	                      /
+	                     <a th:href="@{/bajaEditorial}+${editorial.id}"><i class="fa fa-ban text-danger"></i></a>
+	                  </td>  
+	                  <td>
+	                     <a th:href="@{/eliminarEditorialPorId}+${editorial.id}"><i class="fa fa-trash text-danger"></i></a>
+	                  </td>           
+	                </tr>
+	              </tbody>
+	            </table>
+	      </div>
       </div>
     </section>
 
