--- a/src/main/resources/templates/formAgregarLibro.html
+++ b/src/main/resources/templates/formAgregarLibro.html
@@ -1,23 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+ <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilosForm.css">
 
-    <title>Autores</title>
-  </head>
+    <title>Agregar Libro</title>
+ </head>
+ <body>
 
-  <body>
-    
     <!-- ============ HEADER ============-->
     <header>
         <!-- ============ NAV ============-->
@@ -29,14 +27,14 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
- 				  <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" aria-current="page" th:href="@{/libreria}">Libreria</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" th:href="@{/libros}">Libros</a>
+                    <a class="nav-link active" th:href="@{/libros}">Libros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/autores}">Autores</a>          
+                    <a class="nav-link" th:href="@{/autores}">Autores</a>          
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/editoriales}">Editoriales</a>          
@@ -50,49 +48,31 @@
             </div>
         </nav>
     </header>
-    
 
     <!-- ============ SECTION ============-->
-    <section id="tabla">
-      <div class="titulo bg-dark">
-    	 <h1>AUTORES</h1>
-      </div>
-      <div class="boton-tabla"> 
-      	  <a th:href="@{/agregarAutor}" class="btn btn-primary btn_agregar">Agregar</a>
-	      <div class="tablas mt-4">
-	      		<table class="table table-dark table-hover"> 
-	              <thead class="thead-dark">
-	                <tr>
-	                  <th>Nombre</th>
-	                  <th>¿Está Activo?</th>
-	                  <th>Modificar</th>
-	                  <th>Alta/Baja</th>
-	                  <th>Eliminar</th>
-	                </tr>
-	              </thead>
-	              <tbody>
-	                <tr th:each="autor:${autores}">
-	                  <td th:text="${autor.nombre}"></td>
-	                  <td>
-						<i th:if="${autor.alta}" class="fa fa-circle text-success"></i>
-						<i th:unless="${autor.alta}" class="fa fa-circle text-danger"></i>
-					  </td>           
-	                  <td>
-	                     <a th:href="@{/modificarAutor}+${autor.id}"><i class="fa fa-cogs text-warning"></i></a>
-	                  </td>
-	                  <td>
-	                     <a th:href="@{/altaAutor}+${autor.id}"><i class="fa fa-arrow-up text-success"></i></a>
-	                      /
-	                     <a th:href="@{/bajaAutor}+${autor.id}"><i class="fa fa-ban text-danger"></i></a>
-	                  </td>  
-	                  <td>
-	                     <a th:href="@{/eliminarAutorPorId}+${autor.id}"><i class="fa fa-trash text-danger"></i></a>
-	                  </td>               
-	                </tr>
-	              </tbody>
-	            </table>
-	      </div>
-	  </div>
+    <section id="form">
+        <!-- ============ FORMULARIO ============-->
+        <form th:action="@{/agregarLibro}" th:object=${libro} method="POST" class="form">
+            <div class="form__container">
+                <h2 class="form__title">Datos del Libro</h2>
+                <input name="isbn" th:value="${isbn}" type="number" class="form__input" placeholder="Isbn" required>
+                <input name="titulo" th:value="${titulo}" type="text" class="form__input" placeholder="Título" required>
+                <input name="anio" th:value="${anio}" type="number" class="form__input" placeholder="Año" required>
+                <input name="ejemplares" th:value="${ejemplares}" type="number" class="form__input" placeholder="Ejemplares" required>
+                <select class="form__input" name="idAutor" required>
+                	<option selected disabled value="">Autor</option>
+                	<option th:each="autor:${autores}" th:value="${autor.id}" th:text="${autor.nombre}"></option>
+                </select>
+                <select class="form__input" name="idEditorial" required>
+                	<option selected disabled value="">Editorial</option>
+                	<option th:each="editorial:${editoriales}" th:value="${editorial.id}" th:text="${editorial.nombre}"></option>
+                </select>
+
+                <p th:if="${Error != null}" th:text="${Error}"></p>
+
+                <input type="submit" value="Agregar" class="form__button">
+            </div>
+        </form>
     </section>
 
     <!-- ============ FOOTER ============-->
@@ -170,5 +150,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  </body>
+ </body>
 </html>
