--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
         <!-- ============ NAV ============-->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">📚</a>
+              <a class="navbar-brand" th:href="@{/}">📚</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -34,10 +34,10 @@
                     <a class="nav-link" th:href="@{/libros}">Libros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/autores">Autores</a>          
+                    <a class="nav-link" th:href="@{/autores}">Autores</a>          
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/editoriales">Editoriales</a>          
+                    <a class="nav-link" th:href="@{/editoriales}">Editoriales</a>          
                   </li>
                 </ul>
                 <form class="d-flex">
