--- a/src/main/resources/templates/autores.html
+++ b/src/main/resources/templates/autores.html
@@ -11,7 +11,7 @@
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/estilos.css">
 
     <title>Autores</title>
   </head>
@@ -58,7 +58,7 @@
     	 <h1>AUTORES</h1>
       </div>
       <div class="boton-tabla"> 
-      	  <a th:href="@{/agregarAutor}" class="btn btn-primary btn_agregar">Agregar</a>
+      	  <a th:href="@{/autores/agregarAutor}" class="btn btn-primary btn_agregar">Agregar</a>
 	      <div class="tablas mt-4">
 	      		<table class="table table-dark table-hover"> 
 	              <thead class="thead-dark">
@@ -78,15 +78,15 @@
 						<i th:unless="${autor.alta}" class="fa fa-circle text-danger"></i>
 					  </td>           
 	                  <td>
-	                     <a th:href="@{/modificarAutor}+${autor.id}"><i class="fa fa-cogs text-warning"></i></a>
+	                     <a th:href="@{/autores/modificarAutor/__${autor.id}__}"><i class="fa fa-cogs text-warning"></i></a>
 	                  </td>
 	                  <td>
-	                     <a th:href="@{/altaAutor}+${autor.id}"><i class="fa fa-arrow-up text-success"></i></a>
+	                     <a th:href="@{/autores/altaAutor/__${autor.id}__}"><i class="fa fa-arrow-up text-success"></i></a>
 	                      /
-	                     <a th:href="@{/bajaAutor}+${autor.id}"><i class="fa fa-ban text-danger"></i></a>
+	                     <a th:href="@{/autores/bajaAutor/__${autor.id}__}"><i class="fa fa-ban text-danger"></i></a>
 	                  </td>  
 	                  <td>
-	                     <a th:href="@{/eliminarAutorPorId}+${autor.id}"><i class="fa fa-trash text-danger"></i></a>
+	                     <a th:href="@{/autores/eliminarAutorPorId/__${autor.id}__}"><i class="fa fa-trash text-danger"></i></a>
 	                  </td>               
 	                </tr>
 	              </tbody>
