--- a/src/main/resources/templates/editoriales.html
+++ b/src/main/resources/templates/editoriales.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/estilos.css">
 
     <title>Editoriales</title>
   </head>
@@ -58,7 +58,7 @@
     	 <h1>EDITORIALES</h1>
       </div>
       <div class="boton-tabla">
-	      <a th:href="@{/agregarEditorial}" class="btn btn-primary btn_agregar">Agregar</a>
+	      <a th:href="@{/editoriales/agregarEditorial}" class="btn btn-primary btn_agregar">Agregar</a>
 	      <div class="tablas mt-4">
 	      		<table class="table table-dark table-hover"> 
 	              <thead class="thead-dark">
@@ -78,15 +78,15 @@
 						<i th:unless="${editorial.alta}" class="fa fa-circle text-danger"></i>
 					  </td>           
 	                  <td>
-	                     <a th:href="@{/modificarEditorial}+${editorial.id}"><i class="fa fa-cogs text-warning"></i></a>
+	                     <a th:href="@{/editoriales/modificarEditorial/__${editorial.id}__}"><i class="fa fa-cogs text-warning"></i></a>
 	                  </td>
 	                  <td>
-	                     <a th:href="@{/altaEditorial}+${editorial.id}"><i class="fa fa-arrow-up text-success"></i></a>
+	                     <a th:href="@{/editoriales/altaEditorial/__${editorial.id}__}"><i class="fa fa-arrow-up text-success"></i></a>
 	                      /
-	                     <a th:href="@{/bajaEditorial}+${editorial.id}"><i class="fa fa-ban text-danger"></i></a>
+	                     <a th:href="@{/editoriales/bajaEditorial/__${editorial.id}__}"><i class="fa fa-ban text-danger"></i></a>
 	                  </td>  
 	                  <td>
-	                     <a th:href="@{/eliminarEditorialPorId}+${editorial.id}"><i class="fa fa-trash text-danger"></i></a>
+	                     <a th:href="@{/editoriales/eliminarEditorialPorId/__${editorial.id}__}"><i class="fa fa-trash text-danger"></i></a>
 	                  </td>           
 	                </tr>
 	              </tbody>
