--- a/src/main/resources/static/estilosForm.css
+++ b/src/main/resources/static/estilosForm.css
@@ -15,6 +15,7 @@ body{
     border-radius: 16px;
     padding: 50px 25px;
     opacity: 0.8;
+    box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
 }
 
 .form__container{
