--- a/src/main/resources/templates/editoriales.html
+++ b/src/main/resources/templates/editoriales.html
@@ -59,6 +59,16 @@
       </div>
       <div class="boton-tabla">
 	      <a th:href="@{/editoriales/agregarEditorial}" class="btn btn-primary btn_agregar">Agregar</a>
+	      
+	      <div>
+      	  	<form th:action="@{/editoriales/buscarEditorial}" th:object=${editorial} method="POST" class="form">
+      	  		<input class="buscador bg-dark" th:value="${nombre}" type="text" name="nombre" placeholder=" Nombre de la Editorial">
+      	  		<input type="submit" value="🔍" class="form__button bg-dark btn_buscar">
+      	  		<a th:href="@{/editoriales}" class="btn btn-dark btn_actualizar"><i class="uil uil-sync"></i></a>
+      	  	</form>
+      	  	<p th:if="${ErrorBuscar != null}" th:text="${ErrorBuscar}"></p>
+      	  </div> 
+      	  
 	      <div class="tablas mt-4">
 	      		<table class="table table-dark table-hover"> 
 	              <thead class="thead-dark">
