--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,6 +1,9 @@
 body{
     margin: 50px 0px 0px 0px;
-    background-image: url("https://images2.alphacoders.com/261/thumb-1920-26102.jpg");    
+    background-image: url("/img/fondoTabla.jpg");    
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-size: cover;
 }
 
 section div img{
