--- a/src/main/resources/templates/formModificarAutor.html
+++ b/src/main/resources/templates/formModificarAutor.html
@@ -10,7 +10,7 @@
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <link rel="stylesheet" href="/estilosForm.css">
+    <link rel="stylesheet" href="/css/estilosForm.css">
 
     <title>Modificar Libro</title>
  </head>
