--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 
     <title>Libreria</title>
   </head>
@@ -53,7 +53,7 @@
     <!-- ============ SECTION ============-->
     <section>
         <div>
-            <img src="https://images6.alphacoders.com/306/thumb-1920-306638.jpg" alt="libreria">
+            <img src="/img/fondoLibreria.jpg" alt="libreria">
         </div>
     </section>
 
