--- a/src/main/resources/templates/autores.html
+++ b/src/main/resources/templates/autores.html
@@ -29,7 +29,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
- 				  <li class="nav-item">
+ 				          <li class="nav-item">
                     <a class="nav-link" aria-current="page" th:href="@{/libreria}">Libreria</a>
                   </li>
                   <li class="nav-item">
@@ -40,6 +40,12 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/editoriales}">Editoriales</a>          
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/prestamos}">Préstamos</a>          
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/clientes}">Clientes</a>          
                   </li>
                 </ul>
                 <form class="d-flex">
