--- a/src/main/resources/templates/formModificarEditorial.html
+++ b/src/main/resources/templates/formModificarEditorial.html
@@ -39,6 +39,12 @@
                   <li class="nav-item">
                     <a class="nav-link active" th:href="@{/editoriales}">Editoriales</a>          
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/prestamos}">Préstamos</a>          
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/clientes}">Clientes</a>          
+                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
