--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -41,6 +41,12 @@
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/editoriales}">Editoriales</a>          
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/prestamos}">Préstamos</a>          
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/clientes}">Clientes</a>          
+                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -60,14 +66,14 @@
     	<div class="boton-tabla"> 	
 	    	<a th:href="@{/libros/agregarLibro}" class="btn btn-primary btn_agregar">Agregar</a>
 	    	
-	    	<div>
+	    	  <div>
 	      	  	<form th:action="@{/libros/buscarLibro}" th:object=${libro} method="POST" class="form">
-	      	  		<input class="buscador bg-dark" th:value="${titulo}" type="text" name="titulo" placeholder=" Título del Libro">
-	      	  		<input type="submit" value="🔍" class="form__button bg-dark btn_buscar">
-	      	  		<a th:href="@{/libros}" class="btn btn-dark btn_actualizar"><i class="uil uil-sync"></i></a>
+                  <input class="buscador bg-dark" th:value="${titulo}" type="text" name="titulo" placeholder=" Título del Libro">
+                  <input type="submit" value="🔍" class="form__button bg-dark btn_buscar">
+                  <a th:href="@{/libros}" class="btn btn-dark btn_actualizar"><i class="uil uil-sync"></i></a>
 	      	  	</form>
 	      	  	<p th:if="${ErrorBuscar != null}" th:text="${ErrorBuscar}"></p>
-      	    </div> 
+      	  </div> 
       	    
 	        <div class="tablas mt-4"> 
 	            <table class="table table-dark table-hover">
@@ -98,9 +104,9 @@
 	                    <td th:text="${libro.autor.getNombre()}"></td>
 	                    <td th:text="${libro.editorial.getNombre()}"></td>     
 	                    <td>
-							<i th:if="${libro.alta}" class="fa fa-circle text-success"></i>
-							<i th:unless="${libro.alta}" class="fa fa-circle text-danger"></i>
-						</td>           
+                        <i th:if="${libro.alta}" class="fa fa-circle text-success"></i>
+                        <i th:unless="${libro.alta}" class="fa fa-circle text-danger"></i>
+					  	        </td>           
 	                    <td>
 	                      <a th:href="@{/libros/modificarLibro/__${libro.id}__}"><i class="fa fa-cogs text-warning"></i></a>
 	                    </td>
