--- a/src/main/resources/templates/formModificarCliente.html
+++ b/src/main/resources/templates/formModificarCliente.html
@@ -1,23 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+ <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/css/estilosForm.css">
 
-    <title>Autores</title>
-  </head>
+    <title>Modificar Cliente</title>
+ </head>
+ <body>
 
-  <body>
-    
     <!-- ============ HEADER ============-->
     <header>
         <!-- ============ NAV ============-->
@@ -29,14 +27,14 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
- 				          <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" aria-current="page" th:href="@{/libreria}">Libreria</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/libros}">Libros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/autores}">Autores</a>          
+                    <a class="nav-link" th:href="@{/autores}">Autores</a>          
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/editoriales}">Editoriales</a>          
@@ -45,7 +43,7 @@
                     <a class="nav-link" th:href="@{/prestamos}">Préstamos</a>          
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" th:href="@{/clientes}">Clientes</a>          
+                    <a class="nav-link active" th:href="@{/clientes}">Clientes</a>          
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -56,59 +54,32 @@
             </div>
         </nav>
     </header>
-    
 
     <!-- ============ SECTION ============-->
-    <section id="tabla">
-      <div class="titulo bg-dark">
-    	 <h1>AUTORES</h1>
-      </div>
-      <div class="boton-tabla">   	  
-      	  <a th:href="@{/autores/agregarAutor}" class="btn btn-primary btn_agregar">Agregar</a> 	
-      	    	
-      	  <div>
-      	  	<form th:action="@{/autores/buscarAutor}" th:object=${autor} method="POST" class="form">
-      	  		<input class="buscador bg-dark" th:value="${nombre}" type="text" name="nombre" placeholder=" Nombre del Autor">
-      	  		<input type="submit" value="🔍" class="form__button bg-dark btn_buscar">
-      	  		<a th:href="@{/autores}" class="btn btn-dark btn_actualizar"><i class="uil uil-sync"></i></a>
-      	  	</form>
-      	  	<p th:if="${ErrorBuscar != null}" th:text="${ErrorBuscar}"></p>
-      	  </div> 
- 
-	      <div class="tablas mt-4">
-	      		<table class="table table-dark table-hover"> 
-	              <thead class="thead-dark">
-	                <tr>
-	                  <th>Nombre y Apellido</th>
-	                  <th>¿Está Activo?</th>
-	                  <th>Modificar</th>
-	                  <th>Alta/Baja</th>
-	                  <th>Eliminar</th>
-	                </tr>
-	              </thead>
-	              <tbody>
-	                <tr th:each="autor:${autores}">
-	                  <td th:text="${autor.nombre}"></td>
-	                  <td>
-						<i th:if="${autor.alta}" class="fa fa-circle text-success"></i>
-						<i th:unless="${autor.alta}" class="fa fa-circle text-danger"></i>
-					  </td>           
-	                  <td>
-	                     <a th:href="@{/autores/modificarAutor/__${autor.id}__}"><i class="fa fa-cogs text-warning"></i></a>
-	                  </td>
-	                  <td>
-	                     <a th:href="@{/autores/altaAutor/__${autor.id}__}"><i class="fa fa-arrow-up text-success"></i></a>
-	                      /
-	                     <a th:href="@{/autores/bajaAutor/__${autor.id}__}"><i class="fa fa-ban text-danger"></i></a>
-	                  </td>  
-	                  <td>
-	                     <a th:href="@{/autores/eliminarAutorPorId/__${autor.id}__}"><i class="fa fa-trash text-danger"></i></a>
-	                  </td>               
-	                </tr>
-	              </tbody>
-	            </table>
-	      </div>
-	  </div>
+    <section id="form">
+        <!-- ============ FORMULARIO ============-->
+        <form th:action="@{/clientes/modificarCliente}" th:object=${cliente} method="POST" class="form">
+            <div class="form__container">
+                <h2 class="form__title">Modificar Cliente</h2>
+
+                <input name="id" th:value="${id}" type="hidden" class="form__input" placeholder="Id">
+
+                <label class="form__label" for="">Nombre y Apellido</label>
+                <input name="nombre" th:value="${nombre}" type="text" class="form__input" placeholder="Nombre y Apellido" required>
+
+                <label class="form__label" for="">Dni</label>
+                <input name="dni" th:value="${dni}" type="number" class="form__input" placeholder="Dni" required>
+                
+                <label class="form__label" for="">Teléfono</label>
+                <input name="telefono" th:value="${telefono}" type="number" class="form__input" placeholder="Teléfono" required>    
+
+                <p th:if="${Error != null}" th:text="${Error}"></p>
+
+                <input type="submit" value="Modificar" class="form__button">
+                
+                <a th:href="@{/clientes}" class="btn btn-secondary btn_volver">Volver</a>
+            </div>
+        </form>
     </section>
 
     <!-- ============ FOOTER ============-->
@@ -186,5 +157,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  </body>
+ </body>
 </html>
