--- a/src/main/resources/templates/formModificarCliente.html
+++ b/src/main/resources/templates/formModificarCliente.html
@@ -64,13 +64,13 @@
 
                 <input name="id" th:value="${id}" type="hidden" class="form__input" placeholder="Id">
 
-                <label class="form__label" for="">Nombre y Apellido</label>
+                <label class="form__label" for="">Nombre y Apellido:</label>
                 <input name="nombre" th:value="${nombre}" type="text" class="form__input" placeholder="Nombre y Apellido" required>
 
-                <label class="form__label" for="">Dni</label>
+                <label class="form__label" for="">Dni:</label>
                 <input name="dni" th:value="${dni}" type="number" class="form__input" placeholder="Dni" required>
                 
-                <label class="form__label" for="">Teléfono</label>
+                <label class="form__label" for="">Teléfono:</label>
                 <input name="telefono" th:value="${telefono}" type="number" class="form__input" placeholder="Teléfono" required>    
 
                 <p th:if="${Error != null}" th:text="${Error}"></p>
