--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -126,7 +126,7 @@
     </section>
 
     <!-- ============ FOOTER ============-->
-    <footer class="bg-dark text-center text-white fixed-bottom">
+    <footer class="bg-dark text-center text-white">
         <div id="foot">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
