--- a/src/main/resources/static/css/estilosForm.css
+++ b/src/main/resources/static/css/estilosForm.css
@@ -1,13 +1,15 @@
 body{
-    margin: 50px 0px 0px 0px;
+    margin: 0;
     background-image: url("/img/fondoFormulario.jpg");
     background-repeat: no-repeat;
-    height: 100vh;
     background-size: cover;
+    justify-content: center;
+    align-items: center;
 }
 
 #form{
-	margin-top: 100px;
+	margin-top: 90px;
+	height: 100%;
 }
 
 .form{
@@ -16,7 +18,7 @@ body{
     width: 90%;
     max-width: 400px;
     border-radius: 16px;
-    padding: 45px 25px;
+    padding: 35px 25px;
     padding-bottom: 25px;
     opacity: 0.8;
     box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
@@ -25,7 +27,7 @@ body{
 .form__container{
     width: 100%;
     display: grid;
-    gap: 16px;
+    gap: 15px;
     grid-auto-columns: 100%;
 }
 
@@ -34,6 +36,11 @@ body{
     font-size: 32px;
     font-weight: bold;
     color: #FFF;
+}
+
+.form__label{
+	color: white;
+	font-weight: bold;
 }
 
 .form__input{
